<resources>
    <string name="app_name">File Mover</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="mobilepath">mobile path</string>
    <string name="setpath">set path</string>
    <string name="pcpath">pc path</string>
    <string name="mobile">mobile</string>
    <string name="pc">pc</string>
    <string name="placeholder">placeholder</string>
    <string name="start">start</string>
    <string name="mobileaddress">mobile address</string>
    <string name="pcaddress">pc address</string>
</resources>
