<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_main"
        tools:context="com.github.beenotung.filemover.MainActivity">

    <TextView
            android:id="@+id/debug_tv"
            android:text="Hello World!"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/debug_tv" android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mobileaddress"
            />
            <TextView
                    android:id="@+id/mobileaddress_tv"
                    android:layout_weight="2"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textColor="@android:color/black"
                    android:text="@string/placeholder"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pcaddress"
            />
            <TextView
                    android:id="@+id/pcaddress_tv"
                    android:layout_weight="2"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textColor="@android:color/black"
                    android:text="@string/placeholder"/>
        </LinearLayout>
        <View style="@style/separator" android:layout_margin="@dimen/standard_margin"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mobilepath"
            />
            <Button
                    android:id="@+id/setpath_mobile_btn"
                    android:layout_weight="3"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:text="@string/setpath"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pcpath"
            />
            <Button
                    android:id="@+id/setpath_pc_btn"
                    android:layout_weight="3"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:text="@string/setpath"/>
        </LinearLayout>
        <View style="@style/separator" android:layout_margin="@dimen/standard_margin"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        >
            <TextView
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/mobile"/>
            <Button
                    android:id="@+id/direction_btn"
                    android:layout_weight="3"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder"/>
            <TextView
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/pc"/>
        </LinearLayout>
        <View style="@style/separator" android:layout_margin="@dimen/standard_margin"/>
        <Button
                android:id="@+id/start_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/start"/>
    </LinearLayout>
</RelativeLayout>
